# thermostat_rainmaker

./: .gitignore  CMakeLists.txt  Plan de pruebas.txt  README.md  descargar_esp-rainmaker.sh  flujograma.drawio  manual_depuracion.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  CMakeLists.txt.old  Kconfig.projbuild  alarms_app.c  app_driver.c  app_main.c  events_app.c  idf_component.yml  local_events.c  lv_factory_reset.c  lv_init_lvgl_spi.c  lv_init_thermostat.c  lv_rgb_main.c  lv_thermostat.c  lv_tools.c  lvgl_demo_ui.c  rgblcd.c  schedule_app.c  thermostat_task.c
main/fonts/: russo100.c  russo36.c
main/images/: ic_action_offline.c  ic_action_online.c  ic_action_reset.c  ic_action_thermostat.c  ic_action_upgrade.c  ic_action_waiting_response.c  ic_alarm.c  ic_app.c  ic_down_threshold.c  ic_heating.c  ic_moon.c  ic_ntp_off.c  ic_reset.c  ic_sun.c  ic_thermometer.c  ic_threshold.c  ic_up_threshold.c  ic_wifi_off.c  ic_wifi_on.c
main/include/: alarms_app.h  app_main.h  app_priv.h  events_app.h  local_events.h  lv_factory_reset.h  lv_init_lvgl_spi.h  lv_init_thermostat.h  lv_rgb_main.h  lv_thermostat.h  lv_tools.h  rgblcd.h  schedule_app.h  thermostat_task.h
main/lcd/: CMakeLists.txt  events_lcd.c  lv_factory_thermostat.c  lv_main_thermostat.c  lv_styles_thermostat.c
main/lcd/fonts/: russo48.c
main/lcd/images/: home_thermostat.c  ic_heating.c  ic_thermometer.c  ic_thermometer.c.old  ic_threshold.c  ic_warning.c
main/lcd/include/: events_app.h  events_lcd.h  lv_factory_thermostat.h  lv_main_thermostat.h  lv_styles_thermostat.h
(+1 files in other folders)
